# ScNado

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
barcodes/: BC3_barcodes.txt  BC4_barcodes.txt
config/: config.yaml  samples.tsv
python/scnado/: __init__.py  cat.py  cli.py  config.py  multiome.py  rna.py  utils.py
python/scnado/data/: barcodes_extracted.csv  config_template.yaml.j2
python/scnado/workflow/: Snakefile
python/scnado/workflow/rules/: cat.smk  integrate.smk  rna.smk
python/scnado/workflow/scripts/: find_barcodes.py  make_fragments.py  process_rna.py
src/: barcodes.rs  fragments.rs  lib.rs  main.rs
tests/: test_cat.py  test_cli.py  test_rna.py  test_utils.py
workflow/: Snakefile
workflow/envs/: muon.yaml
workflow/scripts/: export_coverage.py  integrate.py  process_cat.py  process_rna.py
