[package]
name = "scnado"
version = "0.1.0"
edition = "2024"

[lib]
name = "_scnado"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module"] }
ahash = "0.8.12"
anyhow = "1.0.98"
bio = "3.0.0"
bio-types = "1.0.1"
clap = {version = "4.5.51", features = ["derive"]}
colog = "1.3.0"
indicatif = {version = "0.18.3", features = ["rayon"]}
itertools = "0.14.0"
log = "0.4.27"
noodles = {version = '0.102.0', features = ['bgzf', 'bed', 'core', 'csi', 'async', 'sam', 'bam', "fastq"]}
rayon = "1.10.0"
tempfile = "3.20.0"
serde ={ version = "1.0.219", features = ["derive"]}
crossbeam = "0.8.4"
serde_json = "1.0.140"
anstyle = "1.0.11"
futures = "0.3.31"
polars = { version = "0.51.0", features = ["lazy"] }
env_logger = "0.11.8"
flate2 = {version = "1.1.5"}
crossbeam-channel = "0.5.15"
num_cpus = "1.17"
regex = "1.12.2"
