[package]
name = "scnado"
version = "0.1.0"
edition = "2024"

[lib]
name = "_scnado"
crate-type = ["cdylib"]

[dependencies]
gzp = { version = "2.0.2", default-features = false, features = ["deflate_rust"] }
pyo3 = { version = "0.29.0", features = ["extension-module"] }
ahash = "0.8.12"
anyhow = "1.0.102"
bio = "4.0.0"
bio-types = "1.0.1"
clap = {version = "4.6.1", features = ["derive"]}
colog = "1.3.0"
pyo3-log = "0.13.2"
indicatif = {version = "0.18.4", features = ["rayon"]}
itertools = "0.14.0"
log = "0.4.32"
noodles = {version = '0.111.0', features = ['bgzf', 'bed', 'core', 'csi', 'async', 'sam', 'bam', "fastq"]}
rayon = "1.12.0"
tempfile = "3.27.0"
serde ={ version = "1.0.219", features = ["derive"]}
crossbeam = "0.8.4"
serde_json = "1.0.150"
anstyle = "1.0.14"
futures = "0.3.32"
polars = { version = "0.49.1", features = ["lazy"] }
env_logger = "0.11.10"
flate2 = {version = "1.1.9"}
crossbeam-channel = "0.5.15"
num_cpus = "1.17"
regex = "1.12.4"

[features]
extension-module = ["pyo3/extension-module"]
default = []
