[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "scnado"
version = "0.1.0"
description = "A pipeline for processing CUT&TAG and RNA data"
requires-python = ">=3.11"
dynamic = ["dependencies"]
dependencies = [
    "snapatac2>=2.8.0",
    "scanpy>=1.9.0",
    "muon>=0.1.5",
    "pandas<3.0.0",
    "numpy",
    "matplotlib",
    "seaborn",
    "mudata",
    "typer",
    "snakemake",
]



[project.scripts]
scnado = "scnado.cli:app"

[tool.maturin]
features = ["extension-module"]
module-name = "scnado._scnado"
python-source = "python"
